--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4fa1b7d7",
    "metadata": {
     "deletable": false,
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "%%sh\n",
-    "head -X data/final.csv"
+    "head -4 data/final.csv"
    ]
   },
   {
@@ -229,8 +229,8 @@
    },
    "outputs": [],
    "source": [
-    "line_1_final = \"XXX\"\n",
-    "line_2_final = \"XXX\""
+    "line_1_final = \"region,municipality,district,party,votes\"\n",
+    "line_2_final = \"Blekinge län,Karlshamn,0 - Centrala Asarum,S,519\""
    ]
   },
   {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5b7bc3dd",
    "metadata": {
     "deletable": false,
@@ -334,12 +334,27 @@
     "lx_problem_number": "3",
     "lx_problem_points": "3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['region', 'municipality', 'district', 'party', 'votes']\n"
+     ]
+    }
+   ],
    "source": [
+    "import csv\n",
     "\n",
-    "header = XXX\n",
-    "\n",
-    "data = XXX"
+    "with open(\"data/final.csv\") as f:\n",
+    "    header=next(f).strip().split(\",\")\n",
+    "    data=[]\n",
+    "    for row in f:\n",
+    "        row=row.strip().split(\",\")\n",
+    "        data.append(row)\n",
+    "    \n",
+    "print(header)     \n",
+    "    "
    ]
   },
   {
@@ -363,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f1beb51a",
    "metadata": {
     "deletable": false,
@@ -374,7 +389,19 @@
     "lx_problem_number": "3",
     "lx_problem_points": "3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good! You have the header as a list. Hopefully it is the correct!\n",
+      "Good! You have the header as a list of strings. Hopefully it is the correct!\n",
+      "Good! You have the data as a list. Hopefully it is the correct!\n",
+      "Good! You have the data as a list of lists. Hopefully it is the correct!\n",
+      "Good! You have the data as a list of lists of strings. Hopefully it is the correct!\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Evaluate this cell locally to make sure you have the answer in the right format\n",
@@ -617,7 +644,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -631,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   },
   "lx_assignment_number": 1,
   "lx_course_instance": "2025",
