--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -490,13 +490,29 @@
     "lx_problem_number": "4",
     "lx_problem_points": "8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8337613824\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Hint the PMF of N is p_N(k) where p_N is\n",
     "from scipy.special import binom as binomial\n",
     "p = 6/10\n",
-    "p_N = lambda k: binomial(10,k)*((1-p)**(10-k))*((p)**k)"
+    "p_N = lambda k: binomial(10,k)*((1-p)**(10-k))*((p)**k)\n",
+    "\n",
+    "\n",
+    "q=0.5\n",
+    "pZ_given_N = lambda z, k: binomial(10-k, z) * (q**z) * ((1-q)**(10-k-z))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -512,13 +528,39 @@
     "lx_problem_number": "4",
     "lx_problem_points": "8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.float64(0.16623861760000005), np.float64(0.16623853222282575), np.float64(0.16623511712151579), np.float64(0.16617364051358016), np.float64(0.16551732549063342), np.float64(0.1608940308080942), np.float64(0.1444527989145165), np.float64(0.11223025722358065), np.float64(0.07321212315323332), np.float64(0.04058456420898439), np.float64(0.0197277069091797)]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Part 1: \n",
     "# replace XXX to represent P(N < 5) for T = [0,1,2,...,10], i.e. your answer should be a list\n",
     "# of length 11.\n",
-    "problem11_probabilities = [XXX,XXX,...,XXX]"
+    "\n",
+    "problem11_probabilities = []\n",
+    "\n",
+    "for T in range(0, 11):\n",
+    "    # Numerator: P(N<5 and Y>=T)\n",
+    "    numerator = sum(\n",
+    "        p_N(k) * sum(pZ_given_N(z, k) for z in range(max(0, T - k), 11 - k))\n",
+    "        for k in range(0, 5)\n",
+    "    )\n",
+    "    \n",
+    "    # Denominator: P(Y>=T)\n",
+    "    denominator = sum(\n",
+    "        p_N(k) * sum(pZ_given_N(z, k) for z in range(max(0, T - k), 11 - k))\n",
+    "        for k in range(0, 11)\n",
+    "    )\n",
+    "    \n",
+    "    problem11_probabilities.append(numerator / denominator)\n",
+    "\n",
+    "print(problem11_probabilities)\n"
    ]
   },
   {
